# fips

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Justfile  PR-REVIEW.md  README.md
crates/fips-core/: Cargo.toml  README.md  build.rs
crates/fips-core/src/: discovery.rs  endpoint.rs  host_firewall.rs  lib.rs  nostr_relay_adapter.rs  peer_rating.rs  perf_events.rs  perf_profile.rs  perf_runtime.rs  time.rs
crates/fips-core/src/bloom/: mod.rs
crates/fips-core/src/cache/: coord_cache.rs  entry.rs  mod.rs
crates/fips-core/src/config/: gateway.rs  mod.rs  node.rs  peer.rs  tests.rs  transport.rs  webrtc_budget.rs  webrtc_budget_tests.rs
crates/fips-core/src/config/node/: discovery.rs  tests.rs
crates/fips-core/src/config/tests/: ble.rs  socket_defaults.rs
crates/fips-core/src/config/transport/: aggregate.rs  ble.rs  tests.rs  tor.rs  webrtc.rs
crates/fips-core/src/control/: commands.rs  firewall_state.rs  listening.rs  mod.rs  protocol.rs  queries.rs
crates/fips-core/src/control/queries/: peer_ratings.rs  stats.rs  tests.rs
crates/fips-core/src/control/snapshots/: show_acl.json  show_bloom.json  show_discovery_trust.json  show_links.json  show_listening_sockets.json  show_mmp.json  show_peer_ratings.json  show_peers.json  show_routing.json  show_sessions.json  show_stats_history.json  show_stats_history_all_peers.json  show_stats_list.json  show_status.json  show_tree.json
crates/fips-core/src/dataplane/: admission.rs  crypto.rs  direct_transport.rs  endpoint_data.rs  engine.rs  engine_support.rs  live_ingress.rs  live_node.rs  live_output.rs  live_routes.rs  live_transport.rs  mod.rs  owner.rs  owner_io.rs  owner_replay.rs  owner_retire.rs  owner_shard.rs  owner_state.rs  runtime.rs  runtime_io.rs  session_handoff.rs  session_wrap.rs  tun_outbound.rs  turn.rs  turn_extract.rs  types.rs  wire.rs  work.rs
crates/fips-core/src/dataplane/tests/: aead_completion.rs  aead_completion_tail.rs  aead_owner_activity.rs  aead_owner_inbound.rs  aead_runtime_owner.rs  aead_runtime_owner_fairness.rs  helpers_and_edges.rs  helpers_wire.rs  live_node_runtime.rs  live_node_runtime_continuation.rs  live_node_runtime_output.rs  live_node_runtime_tail.rs  live_node_session_ingress.rs  live_routes_and_outputs.rs  mod.rs  outbound_fairness.rs  stream_transport.rs
crates/fips-core/src/discovery/: local.rs  local_tests.rs  local_udp.rs
crates/fips-core/src/discovery/lan/: mod.rs  tests.rs
crates/fips-core/src/discovery/nostr/: failure_state.rs  mod.rs  runtime.rs  signal.rs  stun.rs  tests.rs  traversal.rs  types.rs
crates/fips-core/src/endpoint/: builder.rs  nostr.rs  nostr_relay_io.rs  receive.rs  recent_peers.rs  service_receiver.rs  status.rs  tests.rs
crates/fips-core/src/endpoint/recent_peers/: tests.rs
crates/fips-core/src/endpoint/tests/: local_egress.rs  local_rendezvous.rs  (+1 more)
crates/fips-core/src/gateway/: control.rs  dns.rs  mod.rs  net.rs  pool.rs
crates/fips-core/src/mmp/: metrics.rs  mod.rs
crates/fips-core/src/node/: accessors_impl.rs  acl.rs  aead_pool.rs  bloom.rs  core_impl.rs  dataplane_helpers.rs  dataplane_integration.rs  dataplane_owner_sync.rs  dataplane_pending.rs  decrypt_worker.rs  discovery_rate_limit.rs  encrypt_worker.rs  endpoint_channels.rs  endpoint_event.rs  endpoint_service.rs  endpoint_traffic.rs  error.rs  identity_cache.rs  io_impl.rs  lifecycle.rs  link_registry.rs  local_rendezvous.rs  mod.rs  packet_mover2_integration.rs  peer_lifecycle.rs  peer_runtime.rs  rate_limit.rs  recent_requests.rs  retry.rs  retry_jitter.rs  retry_tests.rs  route_impl.rs  routing.rs  routing_error_rate_limit.rs  send_impl.rs  session.rs  session_access_impl.rs  session_registry.rs  session_wire.rs  state.rs  (+5 more)
crates/fips-core/src/noise/: handshake.rs  mod.rs  replay.rs  session.rs  tests.rs
crates/fips-core/src/packet_mover/: admission.rs  crypto.rs  mod.rs  output.rs  owner.rs  pipeline.rs  queues.rs  retire.rs  send.rs
crates/fips-core/src/packet_mover2/: crypto.rs  direct_transport.rs  endpoint_data.rs  engine.rs  live_ingress.rs  live_node.rs  live_output.rs  live_transport.rs  mod.rs  owner.rs  owner_shard.rs  runtime.rs  session_handoff.rs  session_wrap.rs  tun_outbound.rs  turn.rs  types.rs  work.rs
crates/fips-core/src/peer/: active.rs  actor.rs  connection.rs  mod.rs
crates/fips-core/src/perf_profile/: format.rs  tests.rs
crates/fips-core/src/proto/: fsp_wire.rs  lookup.rs  lookup_state.rs  mod.rs  routing.rs
crates/fips-core/src/protocol/: link.rs  mod.rs  session.rs
crates/fips-core/src/transport/: handle.rs  link_negotiation.rs  mod.rs  nostr_relay.rs  packet_channel.rs  packet_channel_io.rs  resolve.rs  sim.rs  stream_io.rs  tests.rs  webrtc.rs  webrtc_data_channel.rs  webrtc_negotiation.rs  webrtc_runtime.rs  webrtc_state_callbacks.rs  webrtc_transport_trait.rs  webrtc_utils.rs  websocket.rs
crates/fips-core/src/tree/: mod.rs  state.rs  tests.rs
crates/fips-core/src/upper/: config.rs  dns.rs  hosts.rs  ipv6_shim.rs  mod.rs  tun.rs  tun_outbound.rs  tun_runtime.rs  tun_write.rs
crates/fips-core/src/utils/: index.rs  mod.rs
crates/fips-core/tests/: default_stack_route.rs  dependency_boundaries.rs  nostr_relay_adapter_api.rs  nostr_relay_transport.rs  public_websocket_transit.rs
crates/fips-endpoint/: Cargo.toml  README.md
crates/fips-endpoint/src/: lib.rs  recent_peers_file.rs
crates/fips-identity/: Cargo.toml  README.md
crates/fips-identity/src/: auth.rs  encoding.rs  lib.rs  local.rs  peer.rs  tests.rs
crates/fips-sim/: Cargo.toml  README.md
crates/fips-sim/benches/: production_mesh.rs
crates/fips-sim/examples/: compare_routing_strategies.rs  production_mesh.rs  wot_admission.rs
crates/fips-sim/src/: lib.rs  progress.rs  test_support.rs  topology.rs  traffic.rs  util.rs  wot.rs  wot_exchange.rs  wot_probe.rs  wot_tests.rs
crates/peer-discovery/: Cargo.toml
crates/peer-discovery/src/: lib.rs  set.rs
crates/peer-discovery/src/backends/: in_memory.rs  mdns.rs  mod.rs  multicast.rs
crates/peer-discovery/tests/: in_memory_roundtrip.rs  mdns_roundtrip.rs  multicast_roundtrip.rs
(+571 files in other folders)
