[package]
name = "fips"
version = "0.3.0-dev"
edition = "2024"
description = "A distributed, decentralized network routing protocol for mesh nodes connecting over arbitrary transports"
license = "MIT"
authors = ["Johnathan Corgan <jcorgan@corganlabs.com>"]
repository = "https://git.iris.to/#/npub1xdhnr9mrv47kkrn95k6cwecearydeh8e895990n3acntwvmgk2dsdeeycm/fips"
readme = "README.md"
publish = false

[workspace]
members = [
    ".",
    "crates/fips-core",
    "crates/fips-endpoint",
    "crates/fips-identity",
    "crates/fips-sim",
]
resolver = "2"

[dependencies]
fips-core = { version = "0.3.33", path = "crates/fips-core", features = ["webrtc-transport"] }

ratatui = "0.30"
serde_json = "1.0"
dirs = "6.0"
hex = "0.4"
clap = { version = "4.5", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1", features = ["rt", "macros", "signal", "sync", "net", "time", "process", "io-util"] }

[target.'cfg(windows)'.dependencies]
windows-service = "0.7"

[package.metadata.deb]
maintainer = "Johnathan Corgan <jcorgan@corganlabs.com>"
copyright = "2026 Johnathan Corgan"
license-file = ["LICENSE", "0"]
section = "net"
priority = "optional"
depends = "libc6, systemd, libdbus-1-3"
recommends = "bluez"
extended-description = """\
FIPS is a distributed, decentralized network routing protocol for mesh \
nodes connecting over arbitrary transports including UDP, TCP, Ethernet, \
Tor, and Bluetooth (BLE). It provides encrypted peer-to-peer connectivity \
with automatic key management, TUN-based virtual networking, and .fips DNS \
resolution."""
maintainer-scripts = "packaging/debian/"
assets = [
    ["target/release/fips", "/usr/bin/", "755"],
    ["target/release/fipsctl", "/usr/bin/", "755"],
    ["target/release/fipstop", "/usr/bin/", "755"],
    ["packaging/common/fips.yaml", "/etc/fips/fips.yaml", "600"],
    ["packaging/common/hosts", "/etc/fips/hosts", "644"],
    ["packaging/common/fips.nft", "/etc/fips/fips.nft", "644"],
    ["packaging/debian/fips.service", "/lib/systemd/system/fips.service", "644"],
    ["packaging/debian/fips-dns.service", "/lib/systemd/system/fips-dns.service", "644"],
    ["packaging/debian/fips-firewall.service", "/lib/systemd/system/fips-firewall.service", "644"],
    ["packaging/common/fips-dns-setup", "/usr/lib/fips/fips-dns-setup", "755"],
    ["packaging/common/fips-dns-teardown", "/usr/lib/fips/fips-dns-teardown", "755"],
    ["packaging/debian/fips.tmpfiles", "/usr/lib/tmpfiles.d/fips.conf", "644"],
    ["target/release/fips-gateway", "/usr/bin/", "755"],
    ["packaging/debian/fips-gateway.service", "/lib/systemd/system/fips-gateway.service", "644"],
    ["docs/fips-security.md", "/usr/share/doc/fips/fips-security.md", "644"],
]
conf-files = ["/etc/fips/fips.yaml", "/etc/fips/hosts", "/etc/fips/fips.nft"]

[[bin]]
name = "fipsctl"
path = "src/bin/fipsctl.rs"

[[bin]]
name = "fips-gateway"
path = "src/bin/fips-gateway.rs"

[[bin]]
name = "fips-webrtc-echo-fixture"
path = "src/bin/fips-webrtc-echo-fixture.rs"

[[bin]]
name = "fipstop"
path = "src/bin/fipstop/main.rs"
