[package]
name = "fips-endpoint"
version = "0.3.0"
edition = "2024"
description = "App-facing FIPS EndpointData API"
license = "MIT"
authors = ["Johnathan Corgan <jcorgan@corganlabs.com>"]
repository = "https://github.com/mmalmi/fips"

[dependencies]
fips-core = { version = "0.3.0", path = "../fips-core" }
