[package]
name = "fips-endpoint"
version = "0.4.25"
edition = "2024"
description = "App-facing FIPS EndpointData API"
license = "MIT"
authors = ["Johnathan Corgan <jcorgan@corganlabs.com>"]
repository = "https://git.iris.to/#/npub1xdhnr9mrv47kkrn95k6cwecearydeh8e895990n3acntwvmgk2dsdeeycm/fips"
readme = "README.md"

[dependencies]
fips-core = { version = "0.4.25", path = "../fips-core" }
