[package]
name = "fips-sim"
version = "0.3.0-dev"
edition = "2024"
description = "Fast in-process simulations for FIPS routing strategy evaluation"
license = "MIT"
authors = ["Johnathan Corgan <jcorgan@corganlabs.com>"]
repository = "https://github.com/jmcorgan/fips"

[dependencies]
fips-core = { path = "../fips-core" }

rand = "0.10.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
