[package]
name = "fips-sim"
version = "0.3.0-dev"
edition = "2024"
description = "Production-backed in-process simulations for FIPS routing evaluation"
license = "MIT"
authors = ["Johnathan Corgan <jcorgan@corganlabs.com>"]
repository = "https://github.com/jmcorgan/fips"

[dependencies]
fips-core = { path = "../fips-core", features = ["sim-transport"] }

hex = "0.4"
rand = "0.10.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread", "sync", "time", "test-util"] }
