[package]
name = "fips-sim"
version = "0.3.0-dev"
edition = "2024"
description = "Production-backed in-process simulations for FIPS routing evaluation"
license = "MIT"
authors = ["Johnathan Corgan <jcorgan@corganlabs.com>"]
repository = "https://git.iris.to/#/npub1xdhnr9mrv47kkrn95k6cwecearydeh8e895990n3acntwvmgk2dsdeeycm/fips"
publish = false

[dependencies]
fips-core = { version = "0.3.47", path = "../fips-core", features = ["sim-transport"] }

hex = "0.4"
rand = "0.10.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread", "sync", "time", "test-util"] }

[[bench]]
name = "production_mesh"
harness = false
