[package]
name = "peer-discovery"
version = "0.0.1"
edition = "2024"
description = "Transport-neutral peer discovery: a Discovery trait with pluggable backends (local registry, mDNS, nostr, pkarr) and per-service advertisement."
license = "MIT"
publish = false

[features]
default = []
mdns = ["dep:mdns-sd", "dep:hex", "dep:tracing"]
multicast = ["dep:netdev", "dep:socket2", "dep:serde_json", "dep:hex", "dep:tracing"]

[dependencies]
tokio = { version = "1", features = ["sync", "rt", "macros"] }
async-trait = "0.1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
mdns-sd = { version = "0.19", default-features = false, optional = true }
netdev = { version = "0.40", optional = true }
socket2 = { version = "0.6", optional = true, features = ["all"] }
serde_json = { version = "1", optional = true }
hex = { version = "0.4", optional = true }
tracing = { version = "0.1", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["sync", "rt", "rt-multi-thread", "macros", "time"] }
hex = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
